--- a/index.html/style.css
+++ b/index.html/style.css
@@ -4,8 +4,8 @@ nav .navbar-brand {
 nav ul li a i {
   margin-right:  2px
 }
-hr .my-4 {
-  color: darkgrey;
+hr {
+  background-color: darkgrey;
 }
 .jumbortron, #home-page  {
   background-image: url('images/news-background-pic-3225524.jpeg');
